# k3mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/k3mcp/: __init__.py  __main__.py  config.py  openrouter.py  prompts.py  server.py
tests/: test_config.py  test_openrouter.py  test_prompts.py  test_protocol.py
