[project]
name = "k3mcp"
version = "0.1.0"
description = "A read-only MCP server for Kimi K3 algorithm review, code review, and project planning through OpenRouter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "catid" }]
dependencies = [
    "httpx>=0.27,<1",
    "mcp>=1.27,<2",
]

[project.urls]
Repository = "https://github.com/catid/k3mcp"

[project.scripts]
k3mcp = "k3mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<2",
    "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k3mcp"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
